Changes with Apache 1.3.10

  *) EBCDIC: Escaped characters were encoding the ebcdic representation
     of the special characters, not the latin1 representation. This
     would result in invalid URI's for, e.g., filenames (with special chars)
     in mod_autoindex.c [Martin Kraemer]

  *) EBCDIC: Fix Byte Ranges for EBCDIC platforms. The necessary switch
     between implied conversion for protocol parts and configured
     conversion for document data was missing. The effect of this was that
     PDF files could not be read by Acrobat Reader (which sends long
     lists of byte ranges in each request) when the server was apache
     on ebcdic machines.
     [Noted by Oliver Reh <Oliver.Reh@FAEDV-N.Bayern.de>, solved by
     Martin Kraemer]

  *) Add IndexOptions FoldersFirst to allow fancy-indexed directory
     listings to have the subdirectories always listed at the top.
     [Ken Coar]

  *) BS2000: Use send() instead of write() in the core buff routines
     for better performance and fewer restrictions (max. transfer size)
     [Martin Kraemer]

  *) If the compiler sanity check fails, force the verbose output
     for TestCompile so people can have a clue what the problem
     is. [Jim Jagielski]

  *) Add --iconsdir, --htdocsdir, and --cgidir option to top-level
     configure script to allow one to override the corresponding 
     variables from config.layout.
     [Ralf S. Engelschall]

  *) Fixed `quad integer' (aka `long long') handling in ap_snprintf.c
     [Jim Jagielski, Ralf S. Engelschall]

  *) Fixed error handling in dbmmanage script.
     [Andrew McRae <andrew@liquid.com>] PR#4973

  *) Fixed NEXT/OpenStep building by adding an fallback typedef for 
     rlim_t to ap_config.h.
     [Mark Miller <markm@swoon.net>] PR#4906

  *) Fix SHARED_CORE feature for HPUX by backing-out a change (comitted
     between 1.3.7 and 1.3.9) which changed the DSO extension from `sl' to
     `so'. This worked only for modules (where we load the DSO manually), but